--- a/app/src/main/res/layout/fragment_planner.xml
+++ b/app/src/main/res/layout/fragment_planner.xml
@@ -21,20 +21,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Spinner
+        <EditText
             android:id="@+id/planner_date_selector"
-            android:layout_width="0dp"
+            android:layout_width="140dp"
             android:layout_height="36dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="24dp"
-            android:background="@drawable/spinner_border"
+            android:background="@drawable/edit_text_border"
             android:drawableEnd="@drawable/calender_icon"
             android:ems="10"
             android:hint="@string/select_date_hint"
-            android:inputType="date"
             android:padding="10dp"
             android:textSize="14sp"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/planner_header" />
