Changed Spinners to DatePicker and TimePicker (#37)
* Add Toolbar

* Changed Spinners to DatePicker and TimePicker

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -69,6 +69,7 @@
             android:background="@drawable/edit_text_border"
             android:fontFamily="@font/roboto_bold"
             android:hint="@string/your_name_hint"
+            android:padding="10dp"
             android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@+id/your_id_text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -95,6 +96,7 @@
             android:background="@drawable/edit_text_border"
             android:fontFamily="@font/roboto_bold"
             android:hint="@string/college_id_hint"
+            android:padding="10dp"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -158,6 +160,7 @@
             android:background="@drawable/edit_text_border"
             android:fontFamily="@font/roboto_bold"
             android:hint="@string/current_cg_hint"
+            android:padding="10dp"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/current_sem_spinner"
@@ -183,6 +186,7 @@
             android:background="@drawable/edit_text_border"
             android:fontFamily="@font/roboto_bold"
             android:hint="@string/num_creds_hint"
+            android:padding="10dp"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
