--- a/app/src/main/res/layout/classes_card.xml
+++ b/app/src/main/res/layout/classes_card.xml
@@ -69,48 +69,48 @@
             app:layout_constraintStart_toEndOf="@+id/tt_lecture_text"
             app:layout_constraintTop_toBottomOf="@+id/tt_course_name_text" />
 
-        <ImageButton
+        <CheckBox
             android:id="@+id/tt_attended_button"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="70dp"
             android:layout_marginBottom="8dp"
+            android:button="@android:color/transparent"
             android:background="@drawable/classes_options_button_background_stroke"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_baseline_check_24" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
-        <ImageButton
+        <CheckBox
             android:id="@+id/tt_missed_button"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="5dp"
-            android:background="@drawable/classes_options_button_background_stroke"
+            android:button="@android:color/transparent"
+            android:background="@drawable/classes_checkbox_missed"
             app:layout_constraintBottom_toTopOf="@+id/tt_holiday_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/tt_attended_button"
             app:layout_constraintTop_toTopOf="@+id/tt_attended_button"
-            app:layout_constraintVertical_bias="1.0"
-            app:srcCompat="@drawable/ic_baseline_close_24" />
+            app:layout_constraintVertical_bias="1.0"/>
 
-        <ImageButton
+        <CheckBox
             android:id="@+id/tt_holiday_button"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="5dp"
-            android:background="@drawable/classes_options_button_background_stroke"
+            android:button="@android:color/transparent"
+            android:background="@drawable/classes_checkbox_holiday"
             app:layout_constraintBottom_toBottomOf="@+id/tt_attended_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/tt_attended_button"
             app:layout_constraintTop_toBottomOf="@+id/tt_missed_button"
-            app:layout_constraintVertical_bias="1.0"
-            app:srcCompat="@drawable/ic_outline_holiday_24" />
+            app:layout_constraintVertical_bias="1.0"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
