--- a/app/src/main/res/layout/classes_card.xml
+++ b/app/src/main/res/layout/classes_card.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -26,10 +25,11 @@
 
         <TextView
             android:id="@+id/tt_course_name_text"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:fontFamily="@font/roboto"
             android:text="@string/course_name"
             android:textColor="@color/black"
@@ -74,13 +74,13 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="70dp"
+            android:layout_marginEnd="52dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/classes_checkbox_attended"
             android:button="@android:color/transparent"
-            android:background="@drawable/classes_options_button_background_stroke"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <CheckBox
             android:id="@+id/tt_missed_button"
@@ -88,14 +88,14 @@
             android:layout_height="25dp"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="5dp"
-            android:button="@android:color/transparent"
             android:background="@drawable/classes_checkbox_missed"
+            android:button="@android:color/transparent"
             app:layout_constraintBottom_toTopOf="@+id/tt_holiday_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/tt_attended_button"
             app:layout_constraintTop_toTopOf="@+id/tt_attended_button"
-            app:layout_constraintVertical_bias="1.0"/>
+            app:layout_constraintVertical_bias="1.0" />
 
         <CheckBox
             android:id="@+id/tt_holiday_button"
@@ -103,14 +103,14 @@
             android:layout_height="25dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="5dp"
-            android:button="@android:color/transparent"
             android:background="@drawable/classes_checkbox_holiday"
+            android:button="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="@+id/tt_attended_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/tt_attended_button"
             app:layout_constraintTop_toBottomOf="@+id/tt_missed_button"
-            app:layout_constraintVertical_bias="1.0"/>
+            app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
