Delete Plan on Completion and few layout changes

--- a/app/src/main/res/layout/course_card.xml
+++ b/app/src/main/res/layout/course_card.xml
@@ -8,7 +8,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/classes_card_background">
+        android:background="@drawable/classes_card_background"
+        android:layout_margin="10dp">
 
         <TextView
             android:id="@+id/dept_code"
