--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -86,6 +86,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="4dp"
+            android:nestedScrollingEnabled="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -107,6 +108,7 @@
                     android:id="@+id/upcoming_evals_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="16dp"
                     android:fastScrollAlwaysVisible="false">
@@ -168,6 +170,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
+                        android:nestedScrollingEnabled="false"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="8dp"
                         android:fastScrollAlwaysVisible="false" />
