--- a/app/src/main/res/layout/fragment_add_evaluative.xml
+++ b/app/src/main/res/layout/fragment_add_evaluative.xml
@@ -155,6 +155,7 @@
             android:padding="10dp"
             android:textSize="14sp"
             android:hint="Add syllabus"
+            android:nextFocusDown="@id/add_eval_duration"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
