--- a/app/src/main/res/layout/planner_card.xml
+++ b/app/src/main/res/layout/planner_card.xml
@@ -45,17 +45,17 @@
                 app:layout_constraintTop_toBottomOf="@+id/time_duration"
                 app:layout_constraintVertical_bias="0.50" />
 
-            <ImageView
-                android:id="@+id/more_options"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/time_duration"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_baseline_more_vert_24" />
+<!--            <ImageView-->
+<!--                android:id="@+id/more_options"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="8dp"-->
+<!--                android:layout_marginEnd="8dp"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintHorizontal_bias="1.0"-->
+<!--                app:layout_constraintStart_toEndOf="@+id/time_duration"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                app:srcCompat="@drawable/ic_baseline_more_vert_24" />-->
 
             <ImageButton
                 android:id="@+id/attended_button"
@@ -67,7 +67,7 @@
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/classes_options_button_background_stroke"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/more_options"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toEndOf="@+id/plan_name"
                 app:layout_constraintTop_toTopOf="parent"
