--- a/app/src/main/res/layout/course_card.xml
+++ b/app/src/main/res/layout/course_card.xml
@@ -126,18 +126,18 @@
             app:layout_constraintStart_toStartOf="@+id/lab"
             app:layout_constraintTop_toBottomOf="@+id/lab" />
 
-        <ImageView
-            android:id="@+id/remove_card"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="12dp"
-            app:layout_constraintBottom_toTopOf="@+id/code_spin"
-            app:layout_constraintEnd_toEndOf="@+id/code_spin"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/dept_code"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_baseline_remove_circle_outline_24" />
+<!--        <ImageView-->
+<!--            android:id="@+id/remove_card"-->
+<!--            android:layout_width="32dp"-->
+<!--            android:layout_height="32dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:layout_marginBottom="12dp"-->
+<!--            app:layout_constraintBottom_toTopOf="@+id/code_spin"-->
+<!--            app:layout_constraintEnd_toEndOf="@+id/code_spin"-->
+<!--            app:layout_constraintHorizontal_bias="1.0"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/dept_code"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:srcCompat="@drawable/ic_baseline_remove_circle_outline_24" />-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
