--- a/app/src/main/res/layout/fragment_add_timetable.xml
+++ b/app/src/main/res/layout/fragment_add_timetable.xml
@@ -28,16 +28,18 @@
 
         <ListView
             android:id="@+id/course_list"
-            android:layout_width="408dp"
+            android:layout_width="match_parent"
             android:layout_height="475dp"
-            android:layout_marginStart="4dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
-            android:layout_marginEnd="4dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="4dp"
             app:layout_constraintBottom_toTopOf="@+id/add_course_btn"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/add_timetable" />
+            app:layout_constraintTop_toBottomOf="@+id/add_timetable"
+            app:layout_constraintVertical_bias="0.44" />
 
         <Button
             android:id="@+id/submit_button"
