--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -69,6 +69,8 @@
             android:background="@drawable/edit_text_border"
             android:fontFamily="@font/roboto_bold"
             android:hint="@string/your_name_hint"
+            android:singleLine="true"
+            android:nextFocusDown="@id/id_edit_text"
             android:padding="10dp"
             android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@+id/your_id_text"
@@ -96,6 +98,7 @@
             android:background="@drawable/edit_text_border"
             android:fontFamily="@font/roboto_bold"
             android:hint="@string/college_id_hint"
+            android:singleLine="true"
             android:padding="10dp"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -160,6 +163,8 @@
             android:background="@drawable/edit_text_border"
             android:fontFamily="@font/roboto_bold"
             android:hint="@string/current_cg_hint"
+            android:singleLine="true"
+            android:nextFocusDown="@id/credits_completed"
             android:padding="10dp"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -186,6 +191,7 @@
             android:background="@drawable/edit_text_border"
             android:fontFamily="@font/roboto_bold"
             android:hint="@string/num_creds_hint"
+            android:singleLine="true"
             android:padding="10dp"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
