--- a/app/src/main/res/layout/fragment_profile_screen.xml
+++ b/app/src/main/res/layout/fragment_profile_screen.xml
@@ -198,16 +198,17 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/classes_list"
-            android:layout_width="409dp"
-            android:layout_height="345dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/date_selector" />
+            app:layout_constraintTop_toBottomOf="@+id/date_selector"
+            app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
