--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -108,9 +108,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:layout_marginBottom="16dp"
-                    android:fastScrollAlwaysVisible="false">
-                </ListView>
+                    android:layout_marginBottom="16dp" />
 
                 <TextView
                     android:id="@+id/your_classes_header"
