--- a/app/src/main/res/layout/fragment_add_timetable.xml
+++ b/app/src/main/res/layout/fragment_add_timetable.xml
@@ -31,15 +31,14 @@
             android:layout_width="match_parent"
             android:layout_height="475dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toTopOf="@+id/add_course_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/add_timetable"
-            app:layout_constraintVertical_bias="0.44" />
+            app:layout_constraintTop_toBottomOf="@+id/add_timetable" />
 
         <Button
             android:id="@+id/submit_button"
@@ -59,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="24dp"
             android:text="@string/add_course"
             android:textColor="@color/black"
             android:textSize="12sp"
