--- a/app/src/main/res/layout/classes_card.xml
+++ b/app/src/main/res/layout/classes_card.xml
@@ -3,13 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
         android:background="@drawable/classes_card_background"
-        android:layout_margin="10dp">
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp">
 
         <TextView
             android:id="@+id/tt_course_code_text"
@@ -31,12 +36,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="16dp"
             android:fontFamily="@font/roboto"
             android:text="@string/course_name"
             android:textColor="@color/black"
             android:textSize="20sp"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintEnd_toStartOf="@+id/tt_missed_button"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tt_course_code_text" />
 
@@ -70,46 +75,44 @@
             app:layout_constraintStart_toEndOf="@+id/tt_lecture_text"
             app:layout_constraintTop_toBottomOf="@+id/tt_course_name_text" />
 
-<!--        <CheckBox-->
-<!--            android:id="@+id/tt_attended_button"-->
-<!--            android:layout_width="60dp"-->
-<!--            android:layout_height="60dp"-->
-<!--            android:layout_marginTop="8dp"-->
-<!--            android:layout_marginEnd="52dp"-->
-<!--            android:layout_marginBottom="8dp"-->
-<!--            android:background="@drawable/classes_checkbox_attended"-->
-<!--            android:button="@android:color/transparent"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent" />-->
+        <!--        <CheckBox-->
+        <!--            android:id="@+id/tt_attended_button"-->
+        <!--            android:layout_width="60dp"-->
+        <!--            android:layout_height="60dp"-->
+        <!--            android:layout_marginTop="8dp"-->
+        <!--            android:layout_marginEnd="52dp"-->
+        <!--            android:layout_marginBottom="8dp"-->
+        <!--            android:background="@drawable/classes_checkbox_attended"-->
+        <!--            android:button="@android:color/transparent"-->
+        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintTop_toTopOf="parent" />-->
 
         <CheckBox
             android:id="@+id/tt_missed_button"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/classes_checkbox_missed"
             android:button="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tt_course_name_text"
             app:layout_constraintTop_toTopOf="parent" />
 
         <!--        <CheckBox-->
-<!--            android:id="@+id/tt_holiday_button"-->
-<!--            android:layout_width="25dp"-->
-<!--            android:layout_height="25dp"-->
-<!--            android:layout_marginStart="8dp"-->
-<!--            android:layout_marginTop="5dp"-->
-<!--            android:background="@drawable/classes_checkbox_holiday"-->
-<!--            android:button="@android:color/transparent"-->
-<!--            app:layout_constraintBottom_toBottomOf="@+id/tt_attended_button"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintHorizontal_bias="0.0"-->
-<!--            app:layout_constraintStart_toEndOf="@+id/tt_attended_button"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/tt_missed_button"-->
-<!--            app:layout_constraintVertical_bias="1.0" />-->
+        <!--            android:id="@+id/tt_holiday_button"-->
+        <!--            android:layout_width="25dp"-->
+        <!--            android:layout_height="25dp"-->
+        <!--            android:layout_marginStart="8dp"-->
+        <!--            android:layout_marginTop="5dp"-->
+        <!--            android:background="@drawable/classes_checkbox_holiday"-->
+        <!--            android:button="@android:color/transparent"-->
+        <!--            app:layout_constraintBottom_toBottomOf="@+id/tt_attended_button"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintHorizontal_bias="0.0"-->
+        <!--            app:layout_constraintStart_toEndOf="@+id/tt_attended_button"-->
+        <!--            app:layout_constraintTop_toBottomOf="@+id/tt_missed_button"-->
+        <!--            app:layout_constraintVertical_bias="1.0" />-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
