--- a/app/src/main/res/layout/course_card.xml
+++ b/app/src/main/res/layout/course_card.xml
@@ -8,8 +8,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/classes_card_background"
-        android:layout_margin="10dp">
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/classes_card_background">
 
         <TextView
             android:id="@+id/dept_code"
@@ -65,7 +66,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:text="@string/lecture_heading"
-            app:layout_constraintEnd_toStartOf="@+id/course_name_timetable"
             app:layout_constraintStart_toStartOf="@+id/branch_spin"
             app:layout_constraintTop_toBottomOf="@+id/course_name_timetable" />
 
@@ -76,7 +76,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:text="@string/tut_heading"
-            app:layout_constraintEnd_toEndOf="@+id/course_name_timetable"
+            app:layout_constraintEnd_toEndOf="@+id/code_spin"
+            app:layout_constraintHorizontal_bias="0.49"
             app:layout_constraintStart_toEndOf="@+id/lecture"
             app:layout_constraintTop_toBottomOf="@+id/course_name_timetable" />
 
